Importing fonts from GoogleAPI and styling navbar links

--- a/src/branding.css
+++ b/src/branding.css
@@ -1,3 +1,8 @@
+body
+{
+	font-family: 'Roboto Condensed';
+}
+
 div
 {
 	display: block;
@@ -55,4 +60,11 @@ div
 	position: relative;
 
 	display: flex;
+}
+
+.navbar-item.link
+{
+	color: white;
+
+	text-decoration: none;
 }
